--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-size:     cover;
+  background-repeat:   no-repeat;
+  background-position: center center; 
+}
